--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:n90O6ZtBFXAjr327B4ZzU8GRE+w5lh7AQ588zbZQ5Co=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://162.254.200.44
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=162.254.200.45
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=iluminareditores
+DB_USERNAME=ecprolipa
+DB_PASSWORD=$$7uwa7PY3JcfC$%
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,14 +27,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=plataformaprolipa@gmail.com
+MAIL_PASSWORD=prolipa3030+
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -49,3 +47,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SANCTUM_STATEFUL_DOMAINS=iluminareditores.com
+SESSION_DOMAIN=.iluminareditores.com
