--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:n90O6ZtBFXAjr327B4ZzU8GRE+w5lh7AQ588zbZQ5Co=
 APP_DEBUG=true
-APP_URL=http://162.254.200.44
+APP_URL=https://api.iluminareditores.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
