--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Iluminar
 APP_ENV=local
 APP_KEY=base64:n90O6ZtBFXAjr327B4ZzU8GRE+w5lh7AQ588zbZQ5Co=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://api.iluminareditores.com
 
 LOG_CHANNEL=stack
