--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        run: composer install
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
