--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Dependencies
         run: composer install
+      - name: Directory Permissions
+        run: chmod -R 775 storage bootstrap/cache
