--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,5 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Dependencies
         run: composer install
+      - name: Directory Permissions Rol
+        run: chown -R :nginx storage bootstrap/cache
       - name: Directory Permissions
-        run: chmod -R 775 storage bootstrap/cache
+        run: chmod -R 0775 storage bootstrap/cache
