--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Directory Permissions Rol
         run: chown -R :nginx storage bootstrap/cache
       - name: Directory Permissions
-        run: chmod -R 0777 storage bootstrap/cache
+        run: script.sh
