--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Directory Permissions Rol
         run: chown -R root:nginx storage bootstrap/cache
       - name: Directory Permissions
+        run: chmod 777 -R storage bootstrap/cache
+      - name: Scrip Permissions
         run: chmod 777 script.sh
       - name: Directory Permissions ug
         run: sh script.sh
