--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Copiar
       run: echo 'admin9230' | sudo -S cp -rf /home/svrfront1/Documentos/iluminar_server/actions-runner/iluminarback/iluminarback /var/www/html/
     - name: Directory Permissions
