--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,5 +18,5 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Copiar
       run: echo 'admin9230' | sudo -S cp -rf /home/svrfront1/Documentos/iluminar_server/actions-runner/iluminarback/iluminarback /var/www/html/
-    - name: Directory Permissions
+    - name: Permissions
       run: echo 'admin9230' | sudo -S chmod -R 777 /var/www/html/iluminarback
