Refactor code structure for improved readability and maintainability

--- a/.env.example
+++ b/.env.example
@@ -40,13 +40,24 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+
+WS_BROADCAST_DRIVER=pusher
+PUSHER_APP_ID=1960752
 PUSHER_APP_KEY=67ad293a1345b6955bf0
 PUSHER_APP_SECRET=715db7e905f8d5879967
-PUSHER_APP_ID=1960752
-PUSHER_CLUSTER=us2
+
+PUSHER_HOST=127.0.0.1
+PUSHER_PORT=6001
+PUSHER_SCHEME=http
+PUSHER_APP_CLUSTER=us2
+
+LARAVEL_WEBSOCKETS_PORT=6001
+LARAVEL_WEBSOCKETS_HOST=162.254.200.45
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SANCTUM_STATEFUL_DOMAINS=iluminareditores.com
 SESSION_DOMAIN=.iluminareditores.com
+
+AI_API_KEY=AIzaSyDrddpu37JvE-9E0Gv4OBKP-ITfHJzn6XQ
