Remove AI_API_KEY from .env and .env.example for security reasons

--- a/.env
+++ b/.env
@@ -64,4 +64,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SANCTUM_STATEFUL_DOMAINS=iluminareditores.com
 SESSION_DOMAIN=.iluminareditores.com
 
-AI_API_KEY=AIzaSyDrddpu37JvE-9E0Gv4OBKP-ITfHJzn6XQ
+AI_API_KEY=
